--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelle</title>
+    <title>form</title>
 </head>
 
 <body>
@@ -64,7 +64,7 @@
      <br>  
 
      <br>
-     <leble for="foto" >inizio foto</lable>
+     <leble for="foto" >invio foto</lable>
      <input type="file" name="foto" id="foto"> 
      <br>
      <input type="checkbox" id="termini">
