--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-<h1>sito isidoro</h1>   
+<h1>sito di Matteo Isidoro</h1> 
+<h2>ad uso didattico</h2> 
+<h3>lavori del corso:</h3> 
     <br>
     <a href ="intestazioni.html">intestazioni</a>
     <br>
