--- a/Ricetta carbonara.html
+++ b/Ricetta carbonara.html
@@ -31,13 +31,13 @@
         <li>Grana</li>
         <li>Pecorino</li>
         <li>pepe nero</li>
-        <li>basilico</li>
-        <li>sale fino</li>
+        
+        
     </ul>
     <hr>
     <h2>Preparazione</h2>
     <p>
-       Per preparare la pasta con crema di peperoni, mettete a bollire l'acqua della pasta e salatela. Nel frattempo lavate i peperoni, rimuovete la calotta , tagliateli per il senso della lunghezza ed eliminate i semini interni , quindi riduceteli a cubetti. Tagliate grossolanamente il pomodoro ramato. Versate un filo d’olio in una casseruola e fate soffriggere gli spicchi di aglio. Aggiungete i cubetti di peperone. Unite anche il pomodoro, salate e poi aromatizzate con il pepe e le foglie di basilico. Cuocete a fuoco medio-alto per circa 15 minuti mescolando di tanto in tanto. Quando i peperoni saranno cotti, versate la pasta nell'acqua che intanto sarà arrivata a bollore e cuocetela al dente. Intanto versate i peperoni cotti col pomodoro in un contenitore alto, eliminando l'aglio, e frullate tutto con il mixer a immersione. Trasferite la crema ottenuta nella padella in cui avete cotto i peperoni, accendete il fuoco basso, unite un mestolo di acqua di cottura della pasta e poi, una volta cotta al dente, scolate la pasta direttamente nella crema di peperoni. Mantecate il tempo di amalgamare bene la pasta, poi trasferite nei piatti da portata e aromatizzate con ancora qualche fogliolina di basilico fresca. La vostra pasta con crema di peperoni è pronta per essere servita.  
+       Per preparare la pasta alla carbonara, mettete a bollire l'acqua della pasta e salatela. Nel frattempo preparate le uova (solo tuorlo) con pecorino grana e pepe, e cucinate il guanciale . Tagliate grossolanamente il pomodoro ramato. Versate un filo d’olio in una casseruola e fate soffriggere gli spicchi di aglio. Aggiungete i cubetti di peperone. Unite anche il pomodoro, salate e poi aromatizzate con il pepe e le foglie di basilico. Cuocete a fuoco medio-alto per circa 15 minuti mescolando di tanto in tanto. Quando i peperoni saranno cotti, versate la pasta nell'acqua che intanto sarà arrivata a bollore e cuocetela al dente. Intanto versate i peperoni cotti col pomodoro in un contenitore alto, eliminando l'aglio, e frullate tutto con il mixer a immersione. Trasferite la crema ottenuta nella padella in cui avete cotto i peperoni, accendete il fuoco basso, unite un mestolo di acqua di cottura della pasta e poi, una volta cotta al dente, scolate la pasta direttamente nella crema di peperoni. Mantecate il tempo di amalgamare bene la pasta, poi trasferite nei piatti da portata e   
     </p>
     <br>
     <br>
