--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
     <a href="form.html">form</a>
     <br>
     <a href="immagineCasa.html">immagine</a> 
+    <br>
+    <a href="Tabella.html">tabella</a>
 </body>
 </html>
