--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br>
     <a href ="intestazioni.html">intestazioni</a>
     <br>
-    <a href="tabella.html">tabella</a>
+    <a href="tabella.html">tabella voti</a>
     <br>
     <a href="IBSU.html">formattazione</a>
     <br>
@@ -21,6 +21,7 @@
     <a href="paragrafi.html">paragrafi</a>
     <br>
     <a href="form.html">form</a>
+
     <br>
     <a href="immagineCasa.html">immagine</a> 
     <br>
