--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <a href="paragrafi.html">paragrafi</a>
     <br>
     <a href="form.html">form</a>
+    <br>
+    <a href="Ricetta carbonara.html">paragrafi</a>
 
     <br>
     <a href="immagineCasa.html">immagine</a> 
