--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <br>
     <a href="form.html">form</a>
     <br>
-    <a href="Ricetta carbonara.html">paragrafi</a>
+    <a href="Ricetta carbonara.html">ricetta carbonara</a>
 
     <br>
     <a href="immagineCasa.html">immagine</a> 
