--- a/Ricetta carbonara.html
+++ b/Ricetta carbonara.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pasta alla carbonara</h1>
-    <img src="./img/Pasta-alla-carbonara-3.webp" alt="pasta-alla-carbonara" width="600" height="400">
+    <img src="https://www.pastarmando.it/images/ricette/_large/pasta-armando_carbonara-day_ricetta_pasta-alla-carbonara_una-stella-in-cucina.jpg" alt="pasta-alla-carbonara" width="600" height="400">
     <table border="5">
         <br>
         </br>
