--- a/index.html
+++ b/index.html
@@ -30,5 +30,10 @@
     <a href="immagineCasa.html">immagine</a> 
     <br>
     <a href="Tabella.html">tabella</a>
+    <br>
+    <a href="Dropdown">Dropdown</a>
+    <br>
+    <a href="Favicon">Favicon</a>
+    <br>
 </body>
 </html>
