--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
     <br>
     <a href="Favicon">Favicon</a>
     <br>
+    <a href="navigation-bar">navigation-bar</a>
+    <br>
 </body>
 </html>
