--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <br>
     <a href="Ricetta carbonara.html">ricetta carbonara</a>
     <br>
-    <a href="portale-con-video">portale con video</a>
+    <a href="portale-con-video.html">portale con video</a>
     <br>
      <a href="immagineCasa.html">immagine</a> 
     <br>
     <a href="Tabella.html">tabella</a>
     <br>
-    <a href="Dropdown">Dropdown</a>
+    <a href="Dropdown.html">Dropdown</a>
     <br>
-    <a href="Favicon">Favicon</a>
+    <a href="Favicon.html">Favicon</a>
     <br>
-    <a href="navigation-bar">navigation-bar</a>
+    <a href="navigation-bar.html">navigation-bar</a>
     <br>
 </body>
 </html>
