--- a/Dropdown.html
+++ b/Dropdown.html
@@ -1,90 +1,99 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
-}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <style>
+    * {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+    nav {
+      position: fixed;
+      width: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      padding: 12px;
+      background-color: rgb(102, 0, 255);
+    }
 
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
+    button {
+      padding: 12px;
+      border-radius: 12px;
+      border: none;
+      cursor: pointer;
+      background-color: #fff;
+      color: #000;
+    }
 
-.dropdown .dropbtn {
-  cursor: pointer;
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
+button:hover {
+      background-color: #e8e8e8;
+    }
 
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: red;
-}
+    #dropdown {
+      position: absolute;
+      display: none;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background-color: rgb(102, 0, 255);
+      padding: 12px;
+    }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+    a {
+      color: white;
+      text-decoration: none;
+    }
 
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
+    a:hover {
+      text-decoration: underline;
+    }
 
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
+  #dropdown-content {
+      display: flex;
+      flex-direction: column;
+      padding: 3px;
+      gap: 5px;
+    }
+  </style>
 
-.show {
-  display: block;
-}
-</style>
-</head>
-<body style="background-color:white;">
+  <body>
+    <nav>
+      <button>Toggle dropdown</button>
+      <div id="dropdown">
+        <div id="dropdown-content">
+          <a href="#">link 1</a>
+          <a href="#">link 2</a>
+          <a href="#">link 3</a>
+        </div>
+      </div>
+    </nav>
+  </body>
 
-<div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <div class="dropdown">
-  <button class="dropbtn" onclick="myFunction()">Dropdown
-    <i class="fa fa-caret-down"></i>
-  </button>
-  <div class="dropdown-content" id="myDropdown">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-  </div> 
-</div>
+  <script>
+    const button = document.querySelector("button");
+    const dropdown = document.querySelector("div");
+    let isVisible = false;
+    button.addEventListener("click", () => {
+      dropdown.style.display = isVisible ? "none" : "block";
+      isVisible = !isVisible;
+    });
 
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Click on the "Dropdown" link to see the dropdown menu.</p>
+document.addEventListener("click", (e) => {
+      if (!dropdown.contains(e.target) && !e.target.matches("button")) {
+        dropdown.style.display = "none";
+        isVisible = false;
+      }
+    });
+  </script>
+</html>
+
+
+
+
+
 
 
