--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="paragrafi.html">paragrafi</a>
     <br>
     <a href="form.html">form</a>
-    <br>
+   <br>
     <a href="Ricetta carbonara.html">ricetta carbonara</a>
     <br>
     <a href="portale-con-video.html">portale con video</a>
@@ -36,6 +36,8 @@
     <a href="Favicon.html">Favicon</a>
     <br>
     <a href="navigation-bar.html">navigation-bar</a>
+    <br>
+    <a href="bootstrap.html">bootstrap</a>
     <br>
 </body>
 </html>
