--- a/portale-con-video.html
+++ b/portale-con-video.html
@@ -1,47 +1,59 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <style>
-      #testa {
-        background-color: red;
-        height: 200px;
-      }
-      #piede {
-        height: 200px;
-        background-color: orange;
-        clear: both;
-      }
-      #c1 {
-        float: left;
-        height: 500px;
-        background-color: blue;
-        width: 15%;
-      }
+        #testa {
+          background-color: red;
+          height: 200px;
+        }
+        #piede {
+          height: 200px;
+          background-color: green;
+          clear: both;
+        }
+        #c1 {
+          float: left;
+          height: 500px;
+          background-color: rgb(0, 128, 128);
+          width: 15%;
+        }
+  
+        #c2 {
+          background-color: rgb(0, 110, 255);
+          height: 500px;
+          float: left;
+          width: 70%;
+        }
+  
+        #c3 {
+          float: right;
+          height: 500px;
+          background-color: blue;
+          width: 15%;
+        }
 
-      #c2 {
-        background-color: green;
-        height: 500px;
-        float: left;
-        width: 70%;
-      }
-
-      #c3 {
-        float: right;
-        height: 500px;
-        background-color: purple;
-        width: 15%;
-        
-   
-      }
-    </style>
-  </head>
-  <body>
-    <h1 align="center"><font color="red"> Portale </font></h1>
-    <hr>
-    <div id="testa"></div>
-    <div id="c1"></div>
-    <div id="c2"><iframe width="560" height="315" src="https://www.youtube.com/embed/G3e-cpL7ofc?si=LkgOLcMWcFx7e84Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
-    <div id="c3"></div>
-    <div id="piede"></div>
-  </body>
+        iframe {
+            width: 100%;
+        }
+      </style>
+    </head>
+    <body>
+      <h1 align="center"><font color="red"> Compito Tps </font></h1>
+      <h2 align="center"><font color="black">Portale</font></h2>
+      <a href="./index.html">torna alla home</a>  
+      <hr>
+      <div id="testa"></div>
+      <div id="c1"></div>
+      <div id="c2">
+          <iframe width="700" height="500" src="https://www.youtube.com/embed/HwkD5lRe0jw?list=PLP5MAKLy8lP-a0MG-MFHKCISmj2Wg4vT6" title="CSS3 Tutorial Italiano 01 - Introduzione approfondita a CSS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+      <div id="c3"></div>
+      <div id="piede"></div>
+  
+</body>
 </html>
-Area degli allegati
