--- a/portale-con-video.html
+++ b/portale-con-video.html
@@ -43,8 +43,8 @@
       </style>
     </head>
     <body>
-      <h1 align="center"><font color="red"> Compito Tps </font></h1>
-      <h2 align="center"><font color="black">Portale</font></h2>
+      <h1 align="center"><font color="red"> lavoro Tps </font></h1>
+      <h2 align="center"><font color="black">Portale con video</font></h2>
       <a href="./index.html">torna alla home</a>  
       <hr>
       <div id="testa"></div>
