--- a/IBSU.html
+++ b/IBSU.html
@@ -2,21 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
 <body>
-<font color= "green" size: "10"
-face?="arial" >ciao
-<br>
-<i>italico</i>
-<br>
-<b>grassetto</b>
-<br>
-<s>barrato</s>
-<br>
-<u>sottolineato</u></font><br/>
-<br>
-   
+    <a href="./index.html">torna alla home</a>  
+    <h1>Tag formattazione</h1> 
+    <h2> Bold(grassetto)</h2>
+    <b>Grassetto con tag b</b>
+    <br  />
+    <strong>Grassetto con tag strong</strong>
+    <br  />
+    <h2>Italic (corsivo)</h2>
+    <i>Corsivo con tag i</i>
+    <br  />
+    <em>emphasized(corsivo) con tag em</em>
+    <br  />
+    <h2>Underline(sottolineato)</h2>
+    <u>Sottolineato</u>
+    <br  />
+    <h2>Barrato</h2>
+    <s>Barrato con tag s</s>
 </body>
 </html>
