--- a/bootstrap.html
+++ b/bootstrap.html
@@ -20,7 +20,7 @@
       <h3>Colonna 1</h3>
       <img src="./img/Milan.jpg" class="img-fluid" alt="Milan">
     <div class="card-body">
-      <h5 class="card-title">Immagine del Milan</h5>
+      <h5 class="card-title">Lamborghini</h5>
       <p class="card-text">Inserisci una didascalia per questa immagine:</p>
       <input type="text" id="captionInput" class="form-control" placeholder="Scrivi qui...">
       <p id="captionOutput" class="figure-caption-output"></p>
