--- a/bootstrap.html
+++ b/bootstrap.html
@@ -18,7 +18,7 @@
    
      <div class="col-12 mb-4">
       <h3>Colonna 1</h3>
-      <img src="./img/Milan.jpg" class="img-fluid" alt="Milan">
+      <img src="./img/lamborghini.webp" class="img-fluid" alt="Milan">
     <div class="card-body">
       <h5 class="card-title">Lamborghini</h5>
       <p class="card-text">Inserisci una didascalia per questa immagine:</p>
@@ -30,7 +30,7 @@
       <h3>Colonna 2</h3>
       <img src="./img/Inter.png" class="img-fluid" alt="Inter">
     <div class="card-body">
-      <h5 class="card-title">Immagine dell'Inter</h5>
+      <h5 class="card-title">Dodge</h5>
       <p class="card-text">Inserisci una didascalia per questa immagine:</p>
       <input type="text" id="captionInput" class="form-control" placeholder="Scrivi qui...">
       <p id="captionOutput" class="figure-caption-output"></p>
