--- a/bootstrap.html
+++ b/bootstrap.html
@@ -28,7 +28,7 @@
   </div>
     <div class="col-12 mb-4">
       <h3>Colonna 2</h3>
-      <img src="./img/Inter.png" class="img-fluid" alt="Inter">
+      <img src="./img/dodge.jpg" class="img-fluid" alt="Inter">
     <div class="card-body">
       <h5 class="card-title">Dodge</h5>
       <p class="card-text">Inserisci una didascalia per questa immagine:</p>
@@ -38,9 +38,9 @@
   </div>
   <div class="col-12 mb-4">
       <h3>Colonna 3</h3>
-      <img src="./img/juve.jpeg" class="img-fluid" alt="Juve">
+      <img src="./img/porshe.jpg" class="img-fluid" alt="Juve">
     <div class="card-body">
-      <h5 class="card-title">Immagine della Juve</h5>
+      <h5 class="card-title">Porshe</h5>
       <p class="card-text">Inserisci una didascalia per questa immagine:</p>
       <input type="text" id="captionInput" class="form-control" placeholder="Scrivi qui...">
       <p id="captionOutput" class="figure-caption-output"></p>
