--- a/bootstrap.html
+++ b/bootstrap.html
@@ -18,7 +18,7 @@
    
      <div class="col-12 mb-4">
       <h3>Colonna 1</h3>
-      <img src="./img/lamborghini.webp" class="img-fluid" alt="Milan">
+      <img src="./img/lamborghini.webp" class="img-fluid" alt="Lamborghini">
     <div class="card-body">
       <h5 class="card-title">Lamborghini</h5>
       <p class="card-text">Inserisci una didascalia per questa immagine:</p>
@@ -28,7 +28,7 @@
   </div>
     <div class="col-12 mb-4">
       <h3>Colonna 2</h3>
-      <img src="./img/dodge.jpg" class="img-fluid" alt="Inter">
+      <img src="./img/dodge.jpg" class="img-fluid" alt="Dodge">
     <div class="card-body">
       <h5 class="card-title">Dodge</h5>
       <p class="card-text">Inserisci una didascalia per questa immagine:</p>
@@ -38,7 +38,7 @@
   </div>
   <div class="col-12 mb-4">
       <h3>Colonna 3</h3>
-      <img src="./img/porshe.jpg" class="img-fluid" alt="Juve">
+      <img src="./img/porshe.webp" class="img-fluid" alt="Porshe">
     <div class="card-body">
       <h5 class="card-title">Porshe</h5>
       <p class="card-text">Inserisci una didascalia per questa immagine:</p>
