--- a/Modal.html
+++ b/Modal.html
@@ -3,37 +3,83 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Esempio Modale Bootstrap</title>
+  <title>Pagina con Modale - Bootstrap</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Icone Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .hero {
+      padding: 100px 20px;
+      text-align: center;
+      background: linear-gradient(90deg, #0d6efd 0%, #6610f2 100%);
+      color: white;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      font-weight: bold;
+    }
+    .hero p {
+      font-size: 1.2rem;
+    }
+  </style>
 </head>
-<body class="p-4">
+<body>
 
-  <!-- Bottone per aprire il modale -->
-  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#mioModale">
-    Apri Modale
-  </button>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <div class="container">
+      <a class="navbar-brand" href="#"><i class="bi bi-bootstrap-fill"></i> ModaleDemo</a>
+    </div>
+  </nav>
+
+  <!-- Sezione principale -->
+  <section class="hero">
+    <div class="container">
+      <h1>Benvenuto!</h1>
+      <p>Questo è un esempio moderno di pagina con Bootstrap e un modale personalizzato.</p>
+      <button class="btn btn-light btn-lg mt-3" data-bs-toggle="modal" data-bs-target="#contattaModale">
+        <i class="bi bi-envelope-fill me-2"></i>Contattaci
+      </button>
+    </div>
+  </section>
 
   <!-- Modale -->
-  <div class="modal fade" id="mioModale" tabindex="-1" aria-labelledby="titoloModale" aria-hidden="true">
-    <div class="modal-dialog">
+  <div class="modal fade" id="contattaModale" tabindex="-1" aria-labelledby="modaleTitolo" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="titoloModale">Titolo del Modale</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+        <div class="modal-header bg-primary text-white">
+          <h5 class="modal-title" id="modaleTitolo"><i class="bi bi-chat-dots-fill me-2"></i>Contattaci</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Chiudi"></button>
         </div>
         <div class="modal-body">
-          Questo è il contenuto del modale. Puoi inserire testo, immagini, form, ecc.
+          <form>
+            <div class="mb-3">
+              <label for="nome" class="form-label">Nome</label>
+              <input type="text" class="form-control" id="nome" placeholder="Il tuo nome">
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+              <label for="messaggio" class="form-label">Messaggio</label>
+              <textarea class="form-control" id="messaggio" rows="4" placeholder="Scrivi qui il tuo messaggio..."></textarea>
+            </div>
+          </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
-          <button type="button" class="btn btn-primary">Salva modifiche</button>
+          <button type="button" class="btn btn-primary">Invia</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Bootstrap JS (richiede Popper.js incluso) -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
