--- a/index.html
+++ b/index.html
@@ -1,43 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="icon" type="image/x-icon" href="./img/IMG_2355.jpeg">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Sito di Matteo Isidoro</title>
+    <link rel="icon" type="image/x-icon" href="./img/IMG_2355.jpeg" />
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #f0f4f8;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 0;
+        }
+
+        h2 {
+            color: #34495e;
+            margin-top: 5px;
+            font-weight: normal;
+            font-style: italic;
+        }
+
+        h3 {
+            margin-top: 30px;
+            margin-bottom: 15px;
+            color: #2c3e50;
+            border-bottom: 2px solid #3498db;
+            padding-bottom: 5px;
+            width: 100%;
+            max-width: 400px;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+            max-width: 400px;
+            width: 100%;
+        }
+
+        ul li {
+            margin-bottom: 10px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #2980b9;
+            font-weight: 600;
+            padding: 8px 12px;
+            display: inline-block;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        a:hover {
+            background-color: #2980b9;
+            color: white;
+        }
+
+        /* Responsive */
+        @media (max-width: 450px) {
+            body {
+                padding: 10px;
+            }
+
+            ul {
+                max-width: 100%;
+            }
+
+            h3 {
+                max-width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
-<h1>sito di Matteo Isidoro</h1> 
-<h2>ad uso didattico</h2> 
-<h3>lavori del corso:</h3> 
-    <br>
-    <a href ="intestazioni.html">intestazioni</a>
-    <br>
-    <a href="tabella.html">tabella voti</a>
-    <br>
-    <a href="IBSU.html">formattazione</a>
-    <br>
-    <a href="LISTE.html">liste</a>
-    <br>
-    <a href="paragrafi.html">paragrafi</a>
-    <br>
-    <a href="form.html">form</a>
-   <br>
-    <a href="Ricetta carbonara.html">ricetta carbonara</a>
-    <br>
-    <a href="portale-con-video.html">portale con video</a>
-    <br>
-     <a href="immagineCasa.html">immagine</a> 
-    <br>
-    <a href="Tabella.html">tabella</a>
-    <br>
-    <a href="Dropdown.html">Dropdown</a>
-    <br>
-    <a href="navigation-bar.html">navigation-bar</a>
-    <br>
-    <a href="bootstrap.html">bootstrap</a>
-    <br>
-    <a href="Modal.html">Modal</a>
-    <br>
+    <h1>Sito di Matteo Isidoro</h1>
+    <h2>Ad uso didattico</h2>
+
+    <h3>Lavori del corso:</h3>
+    <ul>
+        <li><a href="intestazioni.html">Intestazioni</a></li>
+        <li><a href="tabella.html">Tabella voti</a></li>
+        <li><a href="IBSU.html">Formattazione</a></li>
+        <li><a href="LISTE.html">Liste</a></li>
+        <li><a href="paragrafi.html">Paragrafi</a></li>
+        <li><a href="form.html">Form</a></li>
+        <li><a href="Ricetta carbonara.html">Ricetta carbonara</a></li>
+        <li><a href="portale-con-video.html">Portale con video</a></li>
+        <li><a href="immagineCasa.html">Immagine</a></li>
+        <li><a href="Tabella.html">Tabella</a></li>
+        <li><a href="Dropdown.html">Dropdown</a></li>
+        <li><a href="navigation-bar.html">Navigation-bar</a></li>
+        <li><a href="bootstrap.html">Bootstrap</a></li>
+        <li><a href="Modal.html">Modal</a></li>
+    </ul>
 </body>
 </html>
