--- a/intestazioni.html
+++ b/intestazioni.html
@@ -1,16 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Beautiful Headings</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f9fafb;
+      color: #333;
+      padding: 40px;
+      max-width: 600px;
+      margin: auto;
+      line-height: 1.4;
+    }
+
+    h1 {
+      font-size: 3rem;
+      color: #2c3e50;
+      border-bottom: 4px solid #3498db;
+      padding-bottom: 10px;
+      margin-bottom: 30px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+    h2 {
+      font-size: 2.5rem;
+      color: #34495e;
+      margin-bottom: 25px;
+      border-left: 6px solid #2980b9;
+      padding-left: 15px;
+    }
+
+    h3 {
+      font-size: 2rem;
+      color: #3d566e;
+      margin-bottom: 20px;
+      font-style: italic;
+    }
+
+    h4 {
+      font-size: 1.5rem;
+      color: #5a6b7c;
+      margin-bottom: 15px;
+      text-decoration: underline;
+    }
+
+    h5 {
+      font-size: 1.2rem;
+      color: #7a8a99;
+      margin-bottom: 10px;
+      font-weight: 600;
+    }
+
+    h6 {
+      font-size: 1rem;
+      color: #95a1ac;
+      margin-bottom: 5px;
+      font-weight: 400;
+      font-style: italic;
+      letter-spacing: 1px;
+    }
+  </style>
 </head>
 <body>
-    <h1>titolo</h1>
-    <h2>sottotitolo</h2>
-    <h3>sotto sotto titolo</h3>
-    <h4>sotto sotto sotto titolo</h4>
-    <h5>sotto sotto sotto sotto titolo</h5>
-    <h6>sotto sotto sotto sotto sotto titolo</h6>
+  <h1>titolo</h1>
+  <h2>sottotitolo</h2>
+  <h3>sotto sotto titolo</h3>
+  <h4>sotto sotto sotto titolo</h4>
+  <h5>sotto sotto sotto sotto titolo</h5>
+  <h6>sotto sotto sotto sotto sotto titolo</h6>
 </body>
 </html>
