--- a/intestazioni.html
+++ b/intestazioni.html
@@ -1,123 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Beautiful Headings</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-      color: #2c3e50;
-      padding: 40px 20px;
-      max-width: 700px;
-      margin: 40px auto;
-      line-height: 1.4;
-      text-align: center;
-      user-select: none;
-    }
-
-    h1, h2, h3, h4, h5, h6 {
-      margin-bottom: 25px;
-      position: relative;
-      cursor: pointer;
-      transition: color 0.3s ease, transform 0.3s ease;
-    }
-
-    h1 {
-      font-size: 4rem;
-      font-weight: 700;
-      letter-spacing: 0.15em;
-      background: linear-gradient(90deg, #3498db, #9b59b6);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 2px 2px 8px rgba(52, 152, 219, 0.3);
-      border-bottom: 5px solid #9b59b6;
-      padding-bottom: 12px;
-    }
-
-    h1:hover {
-      color: #8e44ad;
-      transform: scale(1.05) rotate(-2deg);
-      text-shadow: 3px 3px 12px rgba(155, 89, 182, 0.7);
-    }
-
-    h2 {
-      font-size: 3rem;
-      font-weight: 600;
-      color: #34495e;
-      border-left: 8px solid #2980b9;
-      padding-left: 20px;
-      box-shadow: 0 4px 15px rgba(41, 128, 185, 0.2);
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-    h2:hover {
-      background-color: #2980b9;
-      color: white;
-      box-shadow: 0 6px 20px rgba(41, 128, 185, 0.5);
-      border-left-color: #8e44ad;
-    }
-
-    h3 {
-      font-size: 2.5rem;
-      font-style: italic;
-      color: #3d566e;
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
-      transition: letter-spacing 0.3s ease;
-    }
-    h3:hover {
-      letter-spacing: 0.2em;
-      color: #5d6d7e;
-    }
-
-    h4 {
-      font-size: 2rem;
-      color: #5a6b7c;
-      text-decoration: underline wavy #2980b9;
-      transition: text-decoration-color 0.3s ease;
-    }
-    h4:hover {
-      text-decoration-color: #9b59b6;
-    }
-
-    h5 {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: #7a8a99;
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
-      transition: color 0.3s ease;
-    }
-    h5:hover {
-      color: #34495e;
-      text-shadow: 0 0 8px #2980b9;
-    }
-
-    h6 {
-      font-size: 1.2rem;
-      font-weight: 400;
-      font-style: italic;
-      color: #95a1ac;
-      letter-spacing: 0.1em;
-      opacity: 0.8;
-      transition: opacity 0.3s ease;
-    }
-    h6:hover {
-      opacity: 1;
-      color: #5d6d7e;
-      text-shadow: 0 0 5px #2980b9;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <h1>titolo</h1>
-  <h2>sottotitolo</h2>
-  <h3>sotto sotto titolo</h3>
-  <h4>sotto sotto sotto titolo</h4>
-  <h5>sotto sotto sotto sotto titolo</h5>
-  <h6>sotto sotto sotto sotto sotto titolo</h6>
+    <h1>titolo</h1>
+    <h2>sottotitolo</h2>
+    <h3>sotto sotto titolo</h3>
+    <h4>sotto sotto sotto titolo</h4>
+    <h5>sotto sotto sotto sotto titolo</h5>
+    <h6>sotto sotto sotto sotto sotto titolo</h6>
 </body>
 </html>
