--- a/paragrafi.html
+++ b/paragrafi.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <p>forza inter</p>
-    <p>Lorem, ipsum dolor.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, quae?</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit.</p>
+    <p>inter è migliore del milan</p>
+    <p>inter è migliore della juve</p>
+    <p>inter è migliore del napoli</p>
+    <p>inter è migliore del barcellona</p>
 </body>
 </html>
